# hailfire-ros-pkg

./: stack.xml
hailfire_base_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
hailfire_base_controller/launch/: hailfire_base_controller.launch
hailfire_base_controller/src/: base_controller.cpp
hailfire_description/: mainpage.dox  manifest.xml  test.launch
hailfire_description/robots/: hailfire.urdf.xacro
hailfire_description/test/: test_urdf.cpp
hailfire_description/urdf/: asus_xtion_pro.urdf.xacro  hailfire_body.urdf.xacro  hailfire_calibration.xacro
hailfire_drivers/: CMakeLists.txt  mainpage.dox  manifest.xml
hailfire_drivers/launch/: hailfire_fpga_proxy.launch
hailfire_drivers/msg/: FPGAKeyValue.msg
hailfire_drivers/src/: fpga_proxy.cpp  klv_helper.cpp  spi_device.cpp
hailfire_drivers/srv/: FPGATransfer.srv
hailfire_drivers/test/: test_klv_helper.cpp  test_spi_device.cpp
hailfire_fpga/: CMakeLists.txt  mainpage.dox  manifest.xml
hailfire_fpga/launch/: hailfire_fpga.launch
hailfire_fpga/src/: hailfire_fpga_node.cpp
hailfire_fpga_msgs/: mainpage.dox  manifest.xml
hailfire_fpga_msgs/msg/: ExtPort.msg  ExtPortArray.msg  (+8 more)
hailfire_fpga_proxy/: mainpage.dox  manifest.xml
hailfire_robo_claw/: CMakeLists.txt  mainpage.dox  manifest.xml
hailfire_robo_claw/include/hailfire_robo_claw/: robo_claw.h
hailfire_robo_claw/src/: robo_claw.cpp
hailfire_robo_claw/test/: test_robo_claw.cpp
hailfire_robo_claw_proxy/: mainpage.dox  manifest.xml
hailfire_spi/: CMakeLists.txt  mainpage.dox  manifest.xml
hailfire_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
(+18 files in other folders)
